[gd_scene load_steps=3 format=3 uid="uid://bxugnafqdbw11"]

[ext_resource type="Theme" uid="uid://dn85ajbf83rbd" path="res://main/ui/theme/main_theme.tres" id="1_4tegv"]
[ext_resource type="Script" path="res://main/ui/menu/settings/settings_menu.gd" id="2_pjukk"]

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_4tegv")
script = ExtResource("2_pjukk")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 86
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 86
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 24

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "Settings"

[node name="GraphicsQualityHBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/GraphicsQualityHBoxContainer"]
layout_mode = 2
text = "Graphics Quality"

[node name="GraphicsQualityOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/GraphicsQualityHBoxContainer" groups=["Option"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
item_count = 3
selected = 1
popup/item_0/text = "low"
popup/item_0/id = 0
popup/item_1/text = "medium"
popup/item_1/id = 1
popup/item_2/text = "high"
popup/item_2/id = 2

[node name="DisplayScaleHBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/DisplayScaleHBoxContainer"]
layout_mode = 2
text = "Display Scale"

[node name="DisplayScaleOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/DisplayScaleHBoxContainer" groups=["Option"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
item_count = 4
selected = 0
popup/item_0/text = "1x"
popup/item_0/id = 0
popup/item_1/text = "1/2x"
popup/item_1/id = 1
popup/item_2/text = "1/4x"
popup/item_2/id = 2
popup/item_3/text = "1/8x"
popup/item_3/id = 3

[node name="WindowModeHBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/WindowModeHBoxContainer"]
layout_mode = 2
text = "Window Mode"

[node name="WindowModeOptionButton" type="OptionButton" parent="PanelContainer/MarginContainer/VBoxContainer/WindowModeHBoxContainer" groups=["Option"]]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
focus_mode = 0
item_count = 2
selected = 0
popup/item_0/text = "windowed"
popup/item_0/id = 0
popup/item_1/text = "fullscreen"
popup/item_1/id = 1
